--- a/backend/new/src/main/resources/application.properties
+++ b/backend/new/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.application.name=mithra
-spring.datasource.url=jdbc:mysql://localhost:3306/mithra
+spring.application.name=new
+
+spring.datasource.url=jdbc:mysql://localhost:3306/new
 spring.datasource.username=root
 spring.datasource.password=4022025@mithr@
 spring.jpa.hibernate.ddl-auto=update
